--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "chart.js": "^3.6.2",
+    "install": "^0.13.0",
+    "npm": "^8.3.0",
     "react": "^17.0.2",
-    "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-google-charts": "^3.0.15",
+    "react-hook-form": "^7.21.2",
     "react-scripts": "4.0.3",
-    "recharts": "^2.1.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
